--- a/home.html
+++ b/home.html
@@ -8,5 +8,11 @@
 <body>
     <p>this is a paragraph.</p>
     <p>another paragraph</p>
+    <p>another paragraph</p>
+    <p>another paragraph</p>
+    <p>another paragraph</p>
+    <p>another paragraph</p>
+    <p>another paragraph</p>
+
 </body>
 </html>
